project(zombie-grinder-source-engine)

find_package(libpng CONFIG REQUIRED)
find_package(ZLIB REQUIRED)
find_package(freetype CONFIG REQUIRED)
find_package(unofficial-libsquish CONFIG REQUIRED)
find_package(Vorbis CONFIG REQUIRED)
find_package(unofficial-theora CONFIG REQUIRED)

add_executable(
        Game

        Version.cpp
        Version.h
        Admin/AdminServer.h
        Admin/AdminServer.cpp

        Game/EditorManager.cpp
        Game/ChatManager.cpp
        Game/TutorialManager.cpp
        Game/TutorialManager.h
        Game/VoteManager.cpp
        Game/VoteManager.h
        Game/EditorManager.h
        Game/ChatManager.h
        Game/Votes/ChangeMapVote.cpp
        Game/Votes/ChangeMapVote.h
        Game/Votes/EditModeVote.cpp
        Game/Votes/EditModeVote.h
        Game/Votes/KickVote.cpp
        Game/Votes/KickVote.h
        Game/Votes/RestartVote.cpp
        Game/Votes/RestartVote.h

        Moderation/ReportManager.h
        Moderation/ReportManager.cpp
        Moderation/Steamworks/Steamworks_ReportManager.h
        Moderation/Steamworks/Steamworks_ReportManager.cpp

        Monitor/MonitorServer.h
        Monitor/MonitorServer.cpp
        Monitor/Packets/BaseMonitorPacket.cpp
        Monitor/Packets/BaseMonitorPacket.h
        Monitor/Packets/GameStateMonitorPacket.cpp
        Monitor/Packets/GameStateMonitorPacket.h
        Monitor/Packets/RequestActiveScriptsPacket.cpp
        Monitor/Packets/RequestActiveScriptsPacket.h
        Monitor/Packets/RequestGetLocalisation.cpp
        Monitor/Packets/RequestGetLocalisation.h
        Monitor/Packets/RequestScriptPropertiesPacket.cpp
        Monitor/Packets/RequestScriptPropertiesPacket.h
        Monitor/Packets/RequestSetLocalisation.cpp
        Monitor/Packets/RequestSetLocalisation.h
        Monitor/Packets/RequestSetScriptPropertyPacket.cpp
        Monitor/Packets/RequestSetScriptPropertyPacket.h
        Monitor/Packets/ResponseActiveScriptsPacket.cpp
        Monitor/Packets/ResponseActiveScriptsPacket.h
        Monitor/Packets/ResponseGetLocalisation.cpp
        Monitor/Packets/ResponseGetLocalisation.h
        Monitor/Packets/ResponseScriptPropertiesPacket.cpp
        Monitor/Packets/ResponseScriptPropertiesPacket.h

        Network/ActorReplicator.cpp
        Network/ActorReplicator.h
        Network/GameNetClient.cpp
        Network/GameNetClient.h
        Network/GameNetClient_GameState.h
        Network/ActorReplicationInfo.h
        Network/GameNetManager.h
        Network/GameNetServer.cpp
        Network/GameNetServer.h
        Network/GameNetUser.cpp
        Network/GameNetUser.h
        Network/GameNetUserState.cpp
        Network/GameNetUserState.h
        Network/GameNetManager.cpp
        Network/SnapshotManager.cpp
        Network/SnapshotManager.h
        Network/Packets/GamePackets.cpp
        Network/Packets/GamePackets.h

        Online/AchievementManager.cpp
        Online/AchievementManager.h
        Online/ChallengeManager.cpp
        Online/ChallengeManager.h
        Online/DLCManager.cpp
        Online/DLCManager.h
        Online/RankingsManager.cpp
        Online/RankingsManager.h
        Online/StatisticsManager.cpp
        Online/StatisticsManager.h

        Profile/ItemManager.cpp
        Profile/ItemManager.h
        Profile/Profile.cpp
        Profile/Profile.h
        Profile/ProfileManager.cpp
        Profile/ProfileManager.h
        Profile/SkillManager.cpp
        Profile/SkillManager.h

        Runner/Game.h
        Runner/GameMode.cpp
        Runner/GameMode.h
        Runner/GameModeTeam.cpp
        Runner/Game.cpp
        Runner/GameOptions.cpp
        Runner/GameOptions.h
        Runner/GameTagReplacer.cpp
        Runner/GameTagReplacer.h
        Runner/GameModeTeam.h
        Runner/SaveData/SaveData.h
        Runner/SaveData/SaveData.cpp

        Scene/GameScene.cpp
        Scene/GameScene.h
        Scene/Actors/Components
        Scene/Actors/CompositeActor.cpp
        Scene/Actors/CompositeActor.h
        Scene/Actors/DemoProxyActor.cpp
        Scene/Actors/DemoProxyActor.h
        Scene/Actors/ScriptedActor.cpp
        Scene/Actors/ScriptedActor.h
        Scene/Actors/Components/Component.h
        Scene/Actors/Components/Component.cpp
        Scene/Actors/Components/Collision/CollisionComponent.h
        Scene/Actors/Components/Collision/CollisionComponent.cpp
        Scene/Actors/Components/Drawable/DrawableComponent.h
        Scene/Actors/Components/Drawable/SpriteComponent.cpp
        Scene/Actors/Components/Drawable/SpriteComponent.h
        Scene/Actors/Components/Drawable/DrawableComponent.cpp
        Scene/Actors/Components/Tickable/BoidComponent.cpp
        Scene/Actors/Components/Tickable/BoidComponent.h
        Scene/Actors/Components/Tickable/EffectComponent.cpp
        Scene/Actors/Components/Tickable/EffectComponent.h
        Scene/Actors/Components/Tickable/ParticleCollectorComponent.cpp
        Scene/Actors/Components/Tickable/ParticleCollectorComponent.h
        Scene/Actors/Components/Tickable/PathPlannerComponent.cpp
        Scene/Actors/Components/Tickable/PathPlannerComponent.h
        Scene/Actors/Components/Tickable/TickableComponent.cpp
        Scene/Actors/Components/Tickable/TickableComponent.h
        Scene/Boids/BoidManager.h
        Scene/Boids/BoidManager.cpp
        Scene/Cameras/EditorCamera.cpp
        Scene/Cameras/EditorCamera.h
        Scene/Cameras/EditorCameraType.h
        Scene/Cameras/GameCamera.cpp
        Scene/Cameras/GameCamera.h
        Scene/Cameras/OrthoCamera.cpp
        Scene/Cameras/OrthoCamera.h
        Scene/Editor/EditorBackground.h
        Scene/Editor/EditorForeground.cpp
        Scene/Editor/EditorForeground.h
        Scene/Editor/EditorMapOutline.cpp
        Scene/Editor/EditorMapOutline.h
        Scene/Editor/EditorBackground.cpp
        Scene/Map/MapSerializer.cpp
        Scene/Map/MapSerializer.h
        Scene/Map/MapLoadTask.cpp
        Scene/Map/MapLoadTask.h
        Scene/Map/Blocks/MapFileLayerBlock.cpp
        Scene/Map/Blocks/MapFileLayerBlock.h
        Scene/Map/Blocks/MapFileObjectBlock.cpp
        Scene/Map/Blocks/MapFileObjectBlock.h
        Scene/Map/Blocks/Factories.h
        Scene/Map/Legacy/LegacyMapConverter.h
        Scene/Map/Legacy/LegacyMapConverter.cpp
        Scene/Map/RandGen/MapRandGenManager.h
        Scene/Map/RandGen/MapRandGenManager.cpp
        Scene/PostProcess/GamePostProcessManager.h
        Scene/PostProcess/GamePostProcessManager.cpp

        Scripts/GameVirtualMachine.h
        Scripts/ScriptEventListener.cpp
        Scripts/ScriptEventListener.h
        Scripts/GameVirtualMachine.cpp
        Scripts/Runtime/CRuntime_Achievement.cpp
        Scripts/Runtime/CRuntime_Achievement.h
        Scripts/Runtime/CRuntime_Actor.cpp
        Scripts/Runtime/CRuntime_Actor.h
        Scripts/Runtime/CRuntime_Challenge.cpp
        Scripts/Runtime/CRuntime_Challenge.h
        Scripts/Runtime/CRuntime_DLC.cpp
        Scripts/Runtime/CRuntime_DLC.h
        Scripts/Runtime/CRuntime_Engine.cpp
        Scripts/Runtime/CRuntime_Engine.h
        Scripts/Runtime/CRuntime_Event.cpp
        Scripts/Runtime/CRuntime_Event.h
        Scripts/Runtime/CRuntime_FX.cpp
        Scripts/Runtime/CRuntime_FX.h
        Scripts/Runtime/CRuntime_Game_Mode.cpp
        Scripts/Runtime/CRuntime_Game_Mode.h
        Scripts/Runtime/CRuntime_Input.cpp
        Scripts/Runtime/CRuntime_Input.h
        Scripts/Runtime/CRuntime_Item.cpp
        Scripts/Runtime/CRuntime_Item.h
        Scripts/Runtime/CRuntime_Item_Archetype.cpp
        Scripts/Runtime/CRuntime_Item_Archetype.h
        Scripts/Runtime/CRuntime_Item_Combination.cpp
        Scripts/Runtime/CRuntime_Item_Combination.h
        Scripts/Runtime/CRuntime_Item_Upgrade_Tree.cpp
        Scripts/Runtime/CRuntime_Item_Upgrade_Tree.h
        Scripts/Runtime/CRuntime_Item_Upgrade_Tree_Node.cpp
        Scripts/Runtime/CRuntime_Item_Upgrade_Tree_Node.h
        Scripts/Runtime/CRuntime_Item_Upgrade_Tree_Node_Modifier.cpp
        Scripts/Runtime/CRuntime_Item_Upgrade_Tree_Node_Modifier.h
        Scripts/Runtime/CRuntime_Leaderboard.cpp
        Scripts/Runtime/CRuntime_Leaderboard.h
        Scripts/Runtime/CRuntime_NetUser.cpp
        Scripts/Runtime/CRuntime_NetUser.h
        Scripts/Runtime/CRuntime_Network.cpp
        Scripts/Runtime/CRuntime_Network.h
        Scripts/Runtime/CRuntime_Options.cpp
        Scripts/Runtime/CRuntime_Options.h
        Scripts/Runtime/CRuntime_Pathing.cpp
        Scripts/Runtime/CRuntime_Pathing.h
        Scripts/Runtime/CRuntime_Post_Process_FX.cpp
        Scripts/Runtime/CRuntime_Post_Process_FX.h
        Scripts/Runtime/CRuntime_Profile.cpp
        Scripts/Runtime/CRuntime_Profile.h
        Scripts/Runtime/CRuntime_Scene.cpp
        Scripts/Runtime/CRuntime_Scene.h
        Scripts/Runtime/CRuntime_Skill.cpp
        Scripts/Runtime/CRuntime_Skill.h
        Scripts/Runtime/CRuntime_Skill_Archetype.cpp
        Scripts/Runtime/CRuntime_Skill_Archetype.h
        Scripts/Runtime/CRuntime_Statistics.cpp
        Scripts/Runtime/CRuntime_Statistics.h
        Scripts/Runtime/CRuntime_Time.cpp
        Scripts/Runtime/CRuntime_Time.h
        Scripts/Runtime/Components/CRuntime_BoidComponent.cpp
        Scripts/Runtime/Components/CRuntime_BoidComponent.h
        Scripts/Runtime/Components/CRuntime_CollisionComponent.cpp
        Scripts/Runtime/Components/CRuntime_CollisionComponent.h
        Scripts/Runtime/Components/CRuntime_EffectComponent.cpp
        Scripts/Runtime/Components/CRuntime_EffectComponent.h
        Scripts/Runtime/Components/CRuntime_ParticleCollectorComponent.cpp
        Scripts/Runtime/Components/CRuntime_ParticleCollectorComponent.h
        Scripts/Runtime/Components/CRuntime_PathPlannerComponent.cpp
        Scripts/Runtime/Components/CRuntime_PathPlannerComponent.h
        Scripts/Runtime/Components/CRuntime_SpriteComponent.cpp
        Scripts/Runtime/Components/CRuntime_SpriteComponent.h

        UI/Scenes/UIScene_Achievements.cpp
        UI/Scenes/UIScene_Achievements.h
        UI/Scenes/UIScene_AdvancedGraphicsOptions.cpp
        UI/Scenes/UIScene_AdvancedGraphicsOptions.h
        UI/Scenes/UIScene_AudioOptions.cpp
        UI/Scenes/UIScene_AudioOptions.h
        UI/Scenes/UIScene_Base.cpp
        UI/Scenes/UIScene_Base.h
        UI/Scenes/UIScene_BuyItemDialog.cpp
        UI/Scenes/UIScene_BuyItemDialog.h
        UI/Scenes/UIScene_ChallengeAnnouncement.cpp
        UI/Scenes/UIScene_ChallengeAnnouncement.h
        UI/Scenes/UIScene_Chat.cpp
        UI/Scenes/UIScene_Chat.h
        UI/Scenes/UIScene_ConfirmDialog.cpp
        UI/Scenes/UIScene_ConfirmDialog.h
        UI/Scenes/UIScene_ConfirmResolutionChange.cpp
        UI/Scenes/UIScene_ConfirmResolutionChange.h
        UI/Scenes/UIScene_ConnectToServer.cpp
        UI/Scenes/UIScene_ConnectToServer.h
        UI/Scenes/UIScene_ControllerTextInputDialog.cpp
        UI/Scenes/UIScene_ControllerTextInputDialog.h
        UI/Scenes/UIScene_Credits.cpp
        UI/Scenes/UIScene_Credits.h
        UI/Scenes/UIScene_Dialog.cpp
        UI/Scenes/UIScene_Dialog.h
        UI/Scenes/UIScene_Equipment.cpp
        UI/Scenes/UIScene_Equipment.h
        UI/Scenes/UIScene_FindGame.cpp
        UI/Scenes/UIScene_FindGame.h
        UI/Scenes/UIScene_FindGameSetup.cpp
        UI/Scenes/UIScene_FindGameSetup.h
        UI/Scenes/UIScene_Game.cpp
        UI/Scenes/UIScene_Game.h
        UI/Scenes/UIScene_GameOver.cpp
        UI/Scenes/UIScene_GameOver.h
        UI/Scenes/UIScene_GameplayOptions.cpp
        UI/Scenes/UIScene_GameplayOptions.h
        UI/Scenes/UIScene_GameSetupMenu.cpp
        UI/Scenes/UIScene_GameSetupMenu.h
        UI/Scenes/UIScene_GlobalChat.cpp
        UI/Scenes/UIScene_GlobalChat.h
        UI/Scenes/UIScene_GraphicsOptions.cpp
        UI/Scenes/UIScene_GraphicsOptions.h
        UI/Scenes/UIScene_HostGame.cpp
        UI/Scenes/UIScene_HostGame.h
        UI/Scenes/UIScene_HostGameSetup.cpp
        UI/Scenes/UIScene_HostGameSetup.h
        UI/Scenes/UIScene_InputOptions.cpp
        UI/Scenes/UIScene_InputOptions.h
        UI/Scenes/UIScene_Inventory.cpp
        UI/Scenes/UIScene_Inventory.h
        UI/Scenes/UIScene_InventoryDropDialog.cpp
        UI/Scenes/UIScene_InventoryDropDialog.h
        UI/Scenes/UIScene_ItemBrokenDialog.cpp
        UI/Scenes/UIScene_ItemBrokenDialog.h
        UI/Scenes/UIScene_KeyBindDialog.cpp
        UI/Scenes/UIScene_KeyBindDialog.h
        UI/Scenes/UIScene_Leaderboards.cpp
        UI/Scenes/UIScene_Leaderboards.h
        UI/Scenes/UIScene_Loading.cpp
        UI/Scenes/UIScene_Loading.h
        UI/Scenes/UIScene_Lobby.cpp
        UI/Scenes/UIScene_Lobby.h
        UI/Scenes/UIScene_MainMenu.cpp
        UI/Scenes/UIScene_MainMenu.h
        UI/Scenes/UIScene_MapLoading.cpp
        UI/Scenes/UIScene_MapLoading.h
        UI/Scenes/UIScene_MiscOptions.cpp
        UI/Scenes/UIScene_MiscOptions.h
        UI/Scenes/UIScene_Moderation.cpp
        UI/Scenes/UIScene_Moderation.h
        UI/Scenes/UIScene_ModerationJudgement.cpp
        UI/Scenes/UIScene_ModerationJudgement.h
        UI/Scenes/UIScene_ModOptions.cpp
        UI/Scenes/UIScene_ModOptions.h
        UI/Scenes/UIScene_OpenWorkshopDialog.cpp
        UI/Scenes/UIScene_OpenWorkshopDialog.h
        UI/Scenes/UIScene_Options.cpp
        UI/Scenes/UIScene_Options.h
        UI/Scenes/UIScene_PaintItemColorSelector.cpp
        UI/Scenes/UIScene_PaintItemColorSelector.h
        UI/Scenes/UIScene_PlayerLogin.cpp
        UI/Scenes/UIScene_PlayerLogin.h
        UI/Scenes/UIScene_Premium.cpp
        UI/Scenes/UIScene_Premium.h
        UI/Scenes/UIScene_RanksAndStats.cpp
        UI/Scenes/UIScene_RanksAndStats.h
        UI/Scenes/UIScene_ReportPlayer.cpp
        UI/Scenes/UIScene_ReportPlayer.h
        UI/Scenes/UIScene_RestrictedModeWarning.cpp
        UI/Scenes/UIScene_RestrictedModeWarning.h
        UI/Scenes/UIScene_Scoreboard.cpp
        UI/Scenes/UIScene_Scoreboard.h
        UI/Scenes/UIScene_SelectProfile.cpp
        UI/Scenes/UIScene_SelectProfile.h
        UI/Scenes/UIScene_Server.cpp
        UI/Scenes/UIScene_Server.h
        UI/Scenes/UIScene_ServerBrowser.cpp
        UI/Scenes/UIScene_ServerBrowser.h
        UI/Scenes/UIScene_Shop.cpp
        UI/Scenes/UIScene_Shop.h
        UI/Scenes/UIScene_Skills.cpp
        UI/Scenes/UIScene_Skills.h
        UI/Scenes/UIScene_Splash.cpp
        UI/Scenes/UIScene_Splash.h
        UI/Scenes/UIScene_StartingLocalServer.cpp
        UI/Scenes/UIScene_StartingLocalServer.h
        UI/Scenes/UIScene_Statistics.cpp
        UI/Scenes/UIScene_Statistics.h
        UI/Scenes/UIScene_SubMenu.cpp
        UI/Scenes/UIScene_SubMenu.h
        UI/Scenes/UIScene_TeamChange.cpp
        UI/Scenes/UIScene_TeamChange.h
        UI/Scenes/UIScene_TimeoutOverlay.cpp
        UI/Scenes/UIScene_TimeoutOverlay.h
        UI/Scenes/UIScene_UnlockDialog.cpp
        UI/Scenes/UIScene_UnlockDialog.h
        UI/Scenes/UIScene_UpgradeWeapon.cpp
        UI/Scenes/UIScene_UpgradeWeapon.h
        UI/Scenes/UIScene_Video.cpp
        UI/Scenes/UIScene_Video.h
        UI/Scenes/UIScene_VoiceChat.cpp
        UI/Scenes/UIScene_VoiceChat.h
        UI/Scenes/UIScene_Vote.cpp
        UI/Scenes/UIScene_Vote.h
        UI/Scenes/UIScene_VoteOverlay.cpp
        UI/Scenes/UIScene_VoteOverlay.h
        UI/Scenes/UIScene_VoteSelectMap.cpp
        UI/Scenes/UIScene_VoteSelectMap.h
        UI/Scenes/UIScene_VoteSelectPlayer.cpp
        UI/Scenes/UIScene_VoteSelectPlayer.h
        UI/Scenes/Backgrounds/MenuTitleRenderer.cpp
        UI/Scenes/Backgrounds/MenuTitleRenderer.h
        UI/Scenes/Backgrounds/UIScene_GameBackground.cpp
        UI/Scenes/Backgrounds/UIScene_GameBackground.h
        UI/Scenes/Backgrounds/UIScene_LoadingBackground.cpp
        UI/Scenes/Backgrounds/UIScene_LoadingBackground.h
        UI/Scenes/Backgrounds/UIScene_MenuBackground.cpp
        UI/Scenes/Backgrounds/UIScene_MenuBackground.h
        UI/Scenes/Backgrounds/UIScene_MenuBackgroundSimple.cpp
        UI/Scenes/Backgrounds/UIScene_MenuBackgroundSimple.h
        UI/Scenes/Backgrounds/UIScene_SubMenuBackground.cpp
        UI/Scenes/Backgrounds/UIScene_SubMenuBackground.h
        UI/Scenes/Editor/EditorTileSelection.h
        UI/Scenes/Editor/EditorTileSelection.cpp
        UI/Scenes/Editor/UIScene_ColorSelector.cpp
        UI/Scenes/Editor/UIScene_ColorSelector.h
        UI/Scenes/Editor/UIScene_Editor.cpp
        UI/Scenes/Editor/UIScene_Editor.h
        UI/Scenes/Editor/UIScene_EditorConfirm.cpp
        UI/Scenes/Editor/UIScene_EditorConfirm.h
        UI/Scenes/Editor/UIScene_FileBrowser.cpp
        UI/Scenes/Editor/UIScene_FileBrowser.h
        UI/Scenes/Editor/UIScene_PublishMap.cpp
        UI/Scenes/Editor/UIScene_PublishMap.h
        UI/Scenes/Editor/UIScene_ResourceBrowser.cpp
        UI/Scenes/Editor/UIScene_ResourceBrowser.h
        UI/Scenes/Editor/Actions/EditorAction.h
        UI/Scenes/Editor/Actions/EditorAction.cpp
        UI/Scenes/Editor/Actions/Scene/EditorChangeMapStateAction.cpp
        UI/Scenes/Editor/Actions/Scene/EditorChangeMapStateAction.h
        UI/Scenes/Editor/Actions/Scene/EditorObjectChangeStateAction.cpp
        UI/Scenes/Editor/Actions/Scene/EditorObjectChangeStateAction.h
        UI/Scenes/Editor/Actions/Scene/EditorObjectCreationAction.cpp
        UI/Scenes/Editor/Actions/Scene/EditorObjectCreationAction.h
        UI/Scenes/Editor/Actions/Scene/EditorObjectDeletionAction.cpp
        UI/Scenes/Editor/Actions/Scene/EditorObjectDeletionAction.h
        UI/Scenes/Editor/Actions/Scene/EditorObjectRespositionAction.cpp
        UI/Scenes/Editor/Actions/Scene/EditorObjectRespositionAction.h
        UI/Scenes/Editor/Actions/Scene/EditorTilemapModifyAction.cpp
        UI/Scenes/Editor/Actions/Scene/EditorTilemapModifyAction.h
        UI/Scenes/Editor/PfxEditor/UIScene_PFXBackground.h
        UI/Scenes/Editor/PfxEditor/UIScene_PfxEditor.cpp
        UI/Scenes/Editor/PfxEditor/UIScene_PfxEditor.h
        UI/Scenes/Editor/PfxEditor/UIScene_PFXBackground.cpp
        UI/Scenes/Helper/UICharacterPreviewRenderer.h
        UI/Scenes/Helper/UICharacterPreviewRenderer.cpp
        UI/Scenes/Profiler/UIScene_Profiler.h
        UI/Scenes/Profiler/UIScene_Profiler.cpp
)

force_include(Game ${CMAKE_SOURCE_DIR}/Source/Generic/Defines.h)

target_include_directories(
        Game
        PRIVATE
            ${CMAKE_SOURCE_DIR}/ThirdParty
            ${CMAKE_SOURCE_DIR}/ThirdParty/libtheoraplayer/include
            ${CMAKE_SOURCE_DIR}/steamworks_sdk_154/sdk
)


add_library(steam_api STATIC IMPORTED)
add_library(sdkencryptedappticket STATIC IMPORTED)

set_target_properties(steam_api PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/steamworks_sdk_154/sdk/redistributable_bin/steam_api.lib)
set_target_properties(sdkencryptedappticket PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/steamworks_sdk_154/sdk/public/steam/lib/win32/sdkencryptedappticket.lib)

target_link_libraries(
        Game

        PRIVATE
            Generic
            Engine
            XScript
            png
            ZLIB::ZLIB
            freetype
            LibGeoIP
            unofficial::libsquish::squish
            cryptocpp
            Vorbis::vorbis Vorbis::vorbisenc Vorbis::vorbisfile
            unofficial::theora::theora unofficial::theora::theoradec unofficial::theora::theoraenc
            libtheoraplayer
            mongoose

            glad::glad
            steam_api
            sdkencryptedappticket
)
