cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
project(zombie-grinder-source-xscript)

add_library(
    XScript
    STATIC

    Memory.h
    Memory.cpp

    Compiler/CCompiler.h
    Compiler/CTranslationUnit.cpp
    Compiler/CTranslationUnit.h
    Compiler/CCompiler.cpp

    Helpers/CPathHelper.cpp
    Helpers/CPathHelper.h
    Helpers/CStringHelper.cpp
    Helpers/CStringHelper.h
    Helpers/CCollectionHelper.h

    Lexer/CLexer.h
    Lexer/CToken.cpp
    Lexer/CToken.h
    Lexer/CLexer.cpp

    Memory/Header.h

    Parser/CParser.h
    Parser/CParser.cpp
    Parser/Nodes/Statements
    Parser/Nodes/Expressions
    Parser/Nodes/TopLevel
    Parser/Nodes/EvaluationResult.cpp
    Parser/Nodes/EvaluationResult.h
    Parser/Nodes/CASTNode.h
    Parser/Nodes/CASTNode.cpp
    Parser/Nodes/CDeclarationIdentifier.h
    Parser/Nodes/CASTNodeMetaData.h
    Parser/Nodes/Expressions/Assignment
    Parser/Nodes/Expressions/Branching
    Parser/Nodes/Expressions/Types
    Parser/Nodes/Expressions/Polymorphism
    Parser/Nodes/Expressions/Values
    Parser/Nodes/Expressions/Math
    Parser/Nodes/Expressions/CExpressionASTNode.h
    Parser/Nodes/Expressions/CExpressionASTNode.cpp
    Parser/Nodes/Expressions/CExpressionBaseASTNode.cpp
    Parser/Nodes/Expressions/CExpressionBaseASTNode.h
    Parser/Nodes/Expressions/Assignment/CAssignmentExpressionASTNode.h
    Parser/Nodes/Expressions/Assignment/CAssignmentExpressionASTNode.cpp
    Parser/Nodes/Expressions/Branching/CCommaExpressionASTNode.h
    Parser/Nodes/Expressions/Branching/CMethodCallExpressionASTNode.cpp
    Parser/Nodes/Expressions/Branching/CMethodCallExpressionASTNode.h
    Parser/Nodes/Expressions/Branching/CTernaryExpressionASTNode.cpp
    Parser/Nodes/Expressions/Branching/CTernaryExpressionASTNode.h
    Parser/Nodes/Expressions/Branching/CCommaExpressionASTNode.cpp
    Parser/Nodes/Expressions/Math/CBinaryMathExpressionASTNode.cpp
    Parser/Nodes/Expressions/Math/CBinaryMathExpressionASTNode.h
    Parser/Nodes/Expressions/Math/CComparisonExpressionASTNode.cpp
    Parser/Nodes/Expressions/Math/CComparisonExpressionASTNode.h
    Parser/Nodes/Expressions/Math/CLogicalExpressionASTNode.cpp
    Parser/Nodes/Expressions/Math/CLogicalExpressionASTNode.h
    Parser/Nodes/Expressions/Math/CPostFixExpressionASTNode.cpp
    Parser/Nodes/Expressions/Math/CPostFixExpressionASTNode.h
    Parser/Nodes/Expressions/Math/CPreFixExpressionASTNode.cpp
    Parser/Nodes/Expressions/Math/CPreFixExpressionASTNode.h
    Parser/Nodes/Expressions/Polymorphism/CBaseExpressionASTNode.cpp
    Parser/Nodes/Expressions/Polymorphism/CBaseExpressionASTNode.h
    Parser/Nodes/Expressions/Polymorphism/CClassRefExpressionASTNode.cpp
    Parser/Nodes/Expressions/Polymorphism/CClassRefExpressionASTNode.h
    Parser/Nodes/Expressions/Polymorphism/CFieldAccessExpressionASTNode.cpp
    Parser/Nodes/Expressions/Polymorphism/CFieldAccessExpressionASTNode.h
    Parser/Nodes/Expressions/Polymorphism/CIndexOfExpressionASTNode.cpp
    Parser/Nodes/Expressions/Polymorphism/CIndexOfExpressionASTNode.h
    Parser/Nodes/Expressions/Polymorphism/CNewExpressionASTNode.cpp
    Parser/Nodes/Expressions/Polymorphism/CNewExpressionASTNode.h
    Parser/Nodes/Expressions/Polymorphism/CThisExpressionASTNode.cpp
    Parser/Nodes/Expressions/Polymorphism/CThisExpressionASTNode.h
    Parser/Nodes/Expressions/Polymorphism/CTypeOfExpressionASTNode.cpp
    Parser/Nodes/Expressions/Polymorphism/CTypeOfExpressionASTNode.h
    Parser/Nodes/Expressions/Types/CArrayInitializerASTNode.cpp
    Parser/Nodes/Expressions/Types/CArrayInitializerASTNode.h
    Parser/Nodes/Expressions/Types/CCastExpressionASTNode.cpp
    Parser/Nodes/Expressions/Types/CCastExpressionASTNode.h
    Parser/Nodes/Expressions/Types/CIdentifierExpressionASTNode.cpp
    Parser/Nodes/Expressions/Types/CIdentifierExpressionASTNode.h
    Parser/Nodes/Expressions/Types/CIndexExpressionASTNode.cpp
    Parser/Nodes/Expressions/Types/CIndexExpressionASTNode.h
    Parser/Nodes/Expressions/Types/CLiteralExpressionASTNode.cpp
    Parser/Nodes/Expressions/Types/CLiteralExpressionASTNode.h
    Parser/Nodes/Expressions/Types/CSliceExpressionASTNode.cpp
    Parser/Nodes/Expressions/Types/CSliceExpressionASTNode.h
    Parser/Nodes/Expressions/Types/CTypeExpressionASTNode.cpp
    Parser/Nodes/Expressions/Types/CTypeExpressionASTNode.h
    Parser/Nodes/Expressions/Values/CConstDictionaryASTNode.h
    Parser/Nodes/Expressions/Values/CConstDictionaryASTNode.cpp
    Parser/Nodes/Statements/CBlockStatementASTNode.cpp
    Parser/Nodes/Statements/CBlockStatementASTNode.h
    Parser/Nodes/Statements/CBreakStatementASTNode.cpp
    Parser/Nodes/Statements/CBreakStatementASTNode.h
    Parser/Nodes/Statements/CCaseStatementASTNode.cpp
    Parser/Nodes/Statements/CCaseStatementASTNode.h
    Parser/Nodes/Statements/CContinueStatementASTNode.cpp
    Parser/Nodes/Statements/CContinueStatementASTNode.h
    Parser/Nodes/Statements/CDefaultStatementASTNode.cpp
    Parser/Nodes/Statements/CDefaultStatementASTNode.h
    Parser/Nodes/Statements/CDoStatementASTNode.cpp
    Parser/Nodes/Statements/CDoStatementASTNode.h
    Parser/Nodes/Statements/CForEachStatementASTNode.cpp
    Parser/Nodes/Statements/CForEachStatementASTNode.h
    Parser/Nodes/Statements/CForStatementASTNode.cpp
    Parser/Nodes/Statements/CForStatementASTNode.h
    Parser/Nodes/Statements/CIfStatementASTNode.cpp
    Parser/Nodes/Statements/CIfStatementASTNode.h
    Parser/Nodes/Statements/CReturnStatementASTNode.cpp
    Parser/Nodes/Statements/CReturnStatementASTNode.h
    Parser/Nodes/Statements/CStateChangeStatementASTNode.cpp
    Parser/Nodes/Statements/CStateChangeStatementASTNode.h
    Parser/Nodes/Statements/CSwitchStatementASTNode.cpp
    Parser/Nodes/Statements/CSwitchStatementASTNode.h
    Parser/Nodes/Statements/CVariableStatementASTNode.cpp
    Parser/Nodes/Statements/CVariableStatementASTNode.h
    Parser/Nodes/Statements/CWhileStatementASTNode.cpp
    Parser/Nodes/Statements/CWhileStatementASTNode.h
    Parser/Nodes/TopLevel/CAliasASTNode.cpp
    Parser/Nodes/TopLevel/CAliasASTNode.h
    Parser/Nodes/TopLevel/CClassASTNode.cpp
    Parser/Nodes/TopLevel/CClassASTNode.h
    Parser/Nodes/TopLevel/CClassBodyASTNode.cpp
    Parser/Nodes/TopLevel/CClassBodyASTNode.h
    Parser/Nodes/TopLevel/CClassMemberASTNode.cpp
    Parser/Nodes/TopLevel/CClassMemberASTNode.h
    Parser/Nodes/TopLevel/CClassPropertyASTNode.cpp
    Parser/Nodes/TopLevel/CClassPropertyASTNode.h
    Parser/Nodes/TopLevel/CClassReplicationASTNode.cpp
    Parser/Nodes/TopLevel/CClassReplicationASTNode.h
    Parser/Nodes/TopLevel/CClassStateASTNode.cpp
    Parser/Nodes/TopLevel/CClassStateASTNode.h
    Parser/Nodes/TopLevel/CDeclarationASTNode.cpp
    Parser/Nodes/TopLevel/CDeclarationASTNode.h
    Parser/Nodes/TopLevel/CMethodBodyASTNode.cpp
    Parser/Nodes/TopLevel/CMethodBodyASTNode.h
    Parser/Nodes/TopLevel/CPackageASTNode.cpp
    Parser/Nodes/TopLevel/CPackageASTNode.h
    Parser/Types/Helper
    Parser/Types/CArrayDataType.h
    Parser/Types/CBoolDataType.cpp
    Parser/Types/CBoolDataType.h
    Parser/Types/CFloatDataType.cpp
    Parser/Types/CFloatDataType.h
    Parser/Types/CArrayDataType.cpp
    Parser/Types/CIntDataType.h
    Parser/Types/CObjectDataType.cpp
    Parser/Types/CObjectDataType.h
    Parser/Types/CStringDataType.cpp
    Parser/Types/CStringDataType.h
    Parser/Types/CVoidDataType.cpp
    Parser/Types/CVoidDataType.h
    Parser/Types/CIntDataType.cpp
    Parser/Types/Helper/CClassReferenceDataType.cpp
    Parser/Types/Helper/CClassReferenceDataType.h
    Parser/Types/Helper/CDataType.cpp
    Parser/Types/Helper/CDataType.h
    Parser/Types/Helper/CIdentifierDataType.cpp
    Parser/Types/Helper/CIdentifierDataType.h
    Parser/Types/Helper/CNullDataType.cpp
    Parser/Types/Helper/CNullDataType.h
    Parser/Types/Helper/CNumericDataType.cpp
    Parser/Types/Helper/CNumericDataType.h

    Preprocessor/CPreprocessor.h
    Preprocessor/CPreprocessor.cpp

    Semanter/CSemanter.h
    Semanter/CSemanter.cpp

    Translator/CTranslator.h
    Translator/CTranslator.cpp
    Translator/VMBinary/CVMBinaryTranslator.h
    Translator/VMBinary/CVMBinaryTranslator.cpp

    VirtualMachine/CGarbageCollector.h
    VirtualMachine/CInstruction.cpp
    VirtualMachine/CInstruction.h
    VirtualMachine/CInstructionBuffer.cpp
    VirtualMachine/CInstructionBuffer.h
    VirtualMachine/CRegister.h
    VirtualMachine/CSymbol.cpp
    VirtualMachine/CSymbol.h
    VirtualMachine/CVirtualMachine.cpp
    VirtualMachine/CVirtualMachine.h
    VirtualMachine/CVMBinary.cpp
    VirtualMachine/CVMBinary.h
    VirtualMachine/CGarbageCollector.cpp
    VirtualMachine/CVMContext.h
    VirtualMachine/CVMNativeFunctionTrampoline.h
    VirtualMachine/CVMNativeMethodTrampoline.h
    VirtualMachine/CVMNativeTrampoline.h
    VirtualMachine/CVMObject.cpp
    VirtualMachine/CVMObject.h
    VirtualMachine/CVMString.cpp
    VirtualMachine/CVMString.h
    VirtualMachine/CVMValue.cpp
    VirtualMachine/CVMValue.h
    VirtualMachine/CVMValueStack.cpp
    VirtualMachine/CVMValueStack.h
    VirtualMachine/InstructionFunctions.inc
    VirtualMachine/InstructionList.inc
    VirtualMachine/CVMBindingHelper.h
    VirtualMachine/Runtime/CRuntime_Array.cpp
    VirtualMachine/Runtime/CRuntime_Array.h
    VirtualMachine/Runtime/CRuntime_Debug.cpp
    VirtualMachine/Runtime/CRuntime_Debug.h
    VirtualMachine/Runtime/CRuntime_Dictionary.cpp
    VirtualMachine/Runtime/CRuntime_Dictionary.h
    VirtualMachine/Runtime/CRuntime_Log.cpp
    VirtualMachine/Runtime/CRuntime_Log.h
    VirtualMachine/Runtime/CRuntime_Math.cpp
    VirtualMachine/Runtime/CRuntime_Math.h
    VirtualMachine/Runtime/CRuntime_Object.cpp
    VirtualMachine/Runtime/CRuntime_Object.h
    VirtualMachine/Runtime/CRuntime_OS.cpp
    VirtualMachine/Runtime/CRuntime_OS.h
    VirtualMachine/Runtime/CRuntime_String.cpp
    VirtualMachine/Runtime/CRuntime_String.h
    VirtualMachine/Runtime/CRuntime_Type.cpp
    VirtualMachine/Runtime/CRuntime_Type.h
    VirtualMachine/Runtime/CRuntime_Vector2.cpp
    VirtualMachine/Runtime/CRuntime_Vector2.h
    VirtualMachine/Runtime/CRuntime_Vector3.cpp
    VirtualMachine/Runtime/CRuntime_Vector3.h
    VirtualMachine/Runtime/CRuntime_Vector4.cpp
    VirtualMachine/Runtime/CRuntime_Vector4.h
)

force_include(XScript ${CMAKE_SOURCE_DIR}/Source/Generic/Defines.h)
